<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutenticationActivity">

    <TextView
        android:id="@+id/label_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/surname_text"
        app:layout_constraintStart_toStartOf="@+id/age_label" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/your_name_hint"
        android:imeOptions="flagNoFullscreen|actionNext"
        android:inputType="textPersonName"

        android:nextFocusForward="@id/surname_text"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/your_surname_hint"
        android:imeOptions="flagNoFullscreen|actionNext"
        android:inputType="textPersonName"

        android:nextFocusForward="@id/age_text"
        app:layout_constraintStart_toEndOf="@+id/label_surname"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <EditText
        android:id="@+id/age_text"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/your_age_hint"
        android:imeOptions="flagNoFullscreen|actionDone"

        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/age_label"
        app:layout_constraintTop_toBottomOf="@+id/surname_text" />

    <TextView
        android:id="@+id/age_label"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/age_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/age_text"
        app:layout_constraintStart_toStartOf="@+id/gender_label" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/gender_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/gender_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:entries="@array/gender_spinner"
        app:layout_constraintStart_toEndOf="@+id/gender_label"
        app:layout_constraintTop_toBottomOf="@+id/age_text" />

    <!--<Spinner-->
    <!--android:id="@+id/handwriting_spinner"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:entries="@array/modality_spinner"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/word_text" />-->

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="start_recording"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--<TextView-->
    <!--android:id="@+id/text_settings"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="500dp"-->
    <!--android:text="@string/settings_label"-->
    <!--app:layout_constraintBaseline_toBaselineOf="@+id/name_text"-->
    <!--app:layout_constraintEnd_toEndOf="parent" />-->
    <!--&lt;!&ndash;app:layout_constraintStart_toStartOf="@+id/handwriting_spinner"&ndash;&gt;-->

    <TextView
        android:id="@+id/repetitions_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Number"
        app:layout_constraintStart_toStartOf="@+id/age_label"
        app:layout_constraintTop_toBottomOf="@+id/gender_label"

        />
    <!--app:layout_constraintBaseline_toBaselineOf="@+id/word_text"-->


    <!--<TextView-->
    <!--android:id="@+id/textView9"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="17dp"-->
    <!--android:text="Id"-->
    <!--app:layout_constraintBaseline_toBaselineOf="@+id/id_text"-->
    <!--app:layout_constraintStart_toStartOf="@+id/handwriting_spinner" />-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_text"
        app:layout_constraintStart_toStartOf="@+id/label_surname" />

    <!--<EditText-->
    <!--android:id="@+id/id_text"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:ems="10"-->
    <!--android:inputType="number"-->
    <!--android:selectAllOnFocus="false"-->
    <!--android:singleLine="false"-->
    <!--android:text="@string/default_id"-->
    <!--app:layout_constraintDimensionRatio="w,1:1"-->
    <!--app:layout_constraintStart_toStartOf="@+id/word_text"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/text_settings"-->

    <!--android:imeOptions="flagNoFullscreen|actionNext"-->
    <!--android:nextFocusForward="@id/word_text"/>-->


    <EditText
        android:id="@+id/items_repetition_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:imeOptions="flagNoFullscreen|actionDone"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/default_word_number"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toEndOf="@+id/repetitions_label"
        app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginStart="44dp"-->
    <!--app:layout_constraintBaseline_toBaselineOf="@+id/item_label"-->
    <!--app:layout_constraintStart_toStartOf="@array/gender_spinner"-->


</android.support.constraint.ConstraintLayout>